# cs231n

./: pyproject.toml
assignment1/: knn.ipynb  svm.ipynb  test.ipynb
assignment1/cs231n/classifiers/: k_nearest_neighbor.py  linear_classifier.py  linear_svm.py
assignments-20230731T012138Z-001/assignments/assignment1/: knn.ipynb  softmax.ipynb  svm.ipynb  two_layer_net.ipynb
assignments-20230731T012138Z-001/assignments/assignment1/cs231n/: gradient_check.py
assignments-20230731T012138Z-001/assignments/assignment1/cs231n/classifiers/: k_nearest_neighbor.py  linear_classifier.py  linear_svm.py
