[tool.poetry]
name = "cs231n"
version = "0.1.0"
description = "learning notes for cs231n"
authors = ["yangbc <yangbc30@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
ipykernel = "^6.25.1"
imageio = "^2.31.1"
future = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
